@@ -777,6 +777,20 @@ literal|"this suggester only works with onlyMorePopular=false"
 argument_list|)
 throw|;
 block|}
+if|if
+condition|(
+name|fst
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+name|Collections
+operator|.
+name|emptyList
+argument_list|()
+return|;
+block|}
 name|BytesRef
 name|scratch
 init|=
@@ -1217,6 +1231,17 @@ name|CharSequence
 name|key
 parameter_list|)
 block|{
+if|if
+condition|(
+name|fst
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
 name|Arc
 argument_list|<
 name|Long
