@@ -1228,6 +1228,86 @@ literal|0.01F
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testEmpty
+specifier|public
+name|void
+name|testEmpty
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Analyzer
+name|standard
+init|=
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|MockTokenizer
+operator|.
+name|WHITESPACE
+argument_list|,
+literal|true
+argument_list|,
+name|MockTokenFilter
+operator|.
+name|ENGLISH_STOPSET
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|AnalyzingSuggester
+name|suggester
+init|=
+operator|new
+name|AnalyzingSuggester
+argument_list|(
+name|standard
+argument_list|)
+decl_stmt|;
+name|suggester
+operator|.
+name|build
+argument_list|(
+operator|new
+name|TermFreqArrayIterator
+argument_list|(
+operator|new
+name|TermFreq
+index|[
+literal|0
+index|]
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|LookupResult
+argument_list|>
+name|result
+init|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+literal|"a"
+argument_list|,
+literal|false
+argument_list|,
+literal|20
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|result
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testNoSeps
 specifier|public
 name|void
