@@ -2328,6 +2328,75 @@ name|value
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testEmpty
+specifier|public
+name|void
+name|testEmpty
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|FuzzySuggester
+name|suggester
+init|=
+operator|new
+name|FuzzySuggester
+argument_list|(
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|MockTokenizer
+operator|.
+name|KEYWORD
+argument_list|,
+literal|false
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|suggester
+operator|.
+name|build
+argument_list|(
+operator|new
+name|TermFreqArrayIterator
+argument_list|(
+operator|new
+name|TermFreq
+index|[
+literal|0
+index|]
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|LookupResult
+argument_list|>
+name|result
+init|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+literal|"a"
+argument_list|,
+literal|false
+argument_list|,
+literal|20
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|result
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testInputPathRequired
 specifier|public
 name|void
